--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,9 @@ Imports:
     httr,
     utils,
     glue,
+    slippymath (>= 0.2.0)
+RoxygenNote: 6.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
