update readme and getting-started vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,5 +20,7 @@ Imports:
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    sf,
+    tidyverse
 VignetteBuilder: knitr
