--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     utils,
     glue,
     slippymath (>= 0.2.0),
-    lwgeom
+    lwgeom,
+    rlang
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
